Renamed API class and added PHP 8.3 requirement as readonly typed properties are used.

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
+        "php": ">=8.3",
         "evilfreelancer/routeros-api-php": "^1.5",
         "ocolin/easyenv": "^1.0",
         "ocolin/easysnmp": "^v1.2"
