--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
     "require": {
         "php": ">=8.3",
         "evilfreelancer/routeros-api-php": "^1.5",
-        "ocolin/easyenv": "^1.1",
-        "ocolin/easysnmp": "^v1.5"
+        "ocolin/easyenv": "^2.4",
+        "ocolin/easysnmp": "^2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.1",
-        "phpstan/phpstan": "^1.11"
+        "phpunit/phpunit": "^12.0",
+        "phpstan/phpstan": "^2.0"
     },
     "license": "MIT",
     "autoload": {
